--- a/LinkinBio/Explore/Cells/ExploreCollectionViewCell.xib
+++ b/LinkinBio/Explore/Cells/ExploreCollectionViewCell.xib
@@ -25,10 +25,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="189" height="256"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UhK-SG-STO">
-                                        <rect key="frame" x="0.0" y="0.0" width="189" height="212.5"/>
+                                        <rect key="frame" x="8" y="0.0" width="173" height="212.5"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red shirt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Jc-5s-9QB">
-                                        <rect key="frame" x="0.0" y="212.5" width="189" height="43.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Link" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Jc-5s-9QB">
+                                        <rect key="frame" x="8" y="212.5" width="173" height="43.5"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -37,6 +37,7 @@
                                 <constraints>
                                     <constraint firstItem="UhK-SG-STO" firstAttribute="height" secondItem="02c-T5-Fr3" secondAttribute="height" multiplier="0.83" id="x0e-52-4Q0"/>
                                 </constraints>
+                                <edgeInsets key="layoutMargins" top="0.0" left="8" bottom="0.0" right="8"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
